fix paging bug and add reps feature draft

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
 
     // Paging
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
-    implementation 'androidx.paging:paging-compose:3.2.0-beta01'
+    implementation "androidx.paging:paging-compose:1.0.0-alpha20"
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
