--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11
+        jvmTarget = JavaVersion.VERSION_17
     }
     buildFeatures {
         compose true
@@ -66,6 +66,9 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
+    // Extended icons
+    implementation "androidx.compose.material:material-icons-extended"
+
     // Material 3
     implementation "androidx.compose.material3:material3:1.1.0"
     implementation "androidx.compose.material3:material3-window-size-class:1.1.0"
@@ -83,16 +86,20 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     // Room
-    implementation "androidx.room:room-runtime:2.5.1"
-    implementation "androidx.room:room-ktx:2.5.1"
+    implementation "androidx.room:room-runtime:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.0"
     //noinspection KaptUsageInsteadOfKsp
-    kapt "androidx.room:room-compiler:2.5.1"
+    kapt "androidx.room:room-compiler:2.5.0"
+    annotationProcessor "androidx.room:room-compiler:2.5.0"
     // optional - Paging 3 Integration
-    implementation "androidx.room:room-paging:2.5.1"
+    implementation "androidx.room:room-paging:2.5.0"
+
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.45"
     kapt "com.google.dagger:hilt-android-compiler:2.45"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    implementation "androidx.navigation:navigation-compose:2.6.0"
 }
